Changed numbering + added images folder

--- a/Intermediate_2/14. ORMs.ipynb
+++ b/Intermediate_2/14. ORMs.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# ORMs\n",
+    "# 14. ORMs\n",
     "\n",
     "## What is an ORM?\n",
     "\n",
@@ -12,7 +12,7 @@
     "\n",
     "An ORM library, written in the language of your choice, encapsulates the codes needed to manipulate the data so you don't use SQL anymore; you interact directly with an object in the same language you're using.\n",
     "\n",
-    "### Pros\n",
+    "### 14.0.1 Pros\n",
     "\n",
     "#### It saves a lot of time\n",
     "\n",
@@ -22,14 +22,14 @@
     "- You don't have to write poorly-formed SQL (most Web programmers really suck at it, because SQL is treated like a \"sub\" language, when in reality it's a very powerful and complex one)\n",
     "- Sanitizing; using prepared statements or transactions are as easy as calling a method.\n",
     "\n",
-    "#### It is more flexible\n",
+    "#### 14.0.2 It is more flexible\n",
     "\n",
     "- It fits in your natural way of coding (it's your language!)\n",
     "- It abstracts the DB system, so you can change it whenever you want and it won't affect your code.\n",
     "- The model is weakly bound to the rest of the application, so you can change it or use it anywhere else.\n",
     "- It lets you use OOP goodness like data inheritance without a headache.\n",
     "\n",
-    "### Con\n",
+    "### 14.0.2 Con\n",
     "\n",
     "#### It can be a pain\n",
     "- You have to learn it, and ORM libraries are not lightweight tools;\n",
