--- a/Intermediate_2/14.1 SQLAlchemy.ipynb
+++ b/Intermediate_2/14.1 SQLAlchemy.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 18.1 SQLAlchemy\n",
+    "## 14.1 SQLAlchemy\n",
     "\n",
     "> SQLAlchemy is the Python SQL toolkit and Object Relational Mapper that gives application developers the full power and flexibility of SQL.\n",
     "\n",
@@ -42,7 +42,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Declaring a Mapping\n",
+    "### 14.1.1 Declaring a Mapping\n",
     "\n",
     "When using the ORM, we need to describe the database tables we'll be dealing with by defining classes, which will be mapped to those tables. This usually goes into the __`models.py`__ file of your application.\n",
     "\n",
@@ -80,7 +80,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Configuring a Database Engine\n",
+    "### 14.1.2 Configuring a Database Engine\n",
     "\n",
     "For this tutorial we will use SQLite. We use the __`create_engine()`__ method to create an __`Engine`__ instance, representing the core interface to the database:"
    ]
@@ -102,7 +102,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Creating the Schema\n",
+    "### 14.1.3 Creating the Schema\n",
     "\n",
     "We call the __`MetaData.create_all()`__ method, passing in our `engine`. Special commands are first emitted to check for the presence of the users table before the actual __`CREATE TABLE`__ statement. Your application doesn't need to run this all the time. This is only executed to create the required tables so this should be in a separate script."
    ]
@@ -122,7 +122,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Creating a Session\n",
+    "### 14.1.4 Creating a Session\n",
     "\n",
     "We’re now ready to start talking to the database. In SQLAlchemy, the ORM’s “handle” to the database is the __`Session`__. We define a __`Session`__ class which will serve as a factory for new __`session`__ objects which are bound to our database:"
    ]
@@ -147,7 +147,7 @@
    "source": [
     "No database connections have been opened at this point. When it’s first used, it retrieves a connection from a pool of connections maintained by the `Engine`, and holds onto it until we commit all changes and/or close the session object. Handling the session depends on how you structure and configure your application.\n",
     "\n",
-    "### Creating an Instance\n",
+    "### 14.1.5 Creating an Instance\n",
     "\n",
     "Let’s create and inspect a __`User`__ object. In your controllers or __`views.py`__ creating objects will look like this:"
    ]
@@ -202,7 +202,7 @@
    "source": [
     "Even though we didn’t specify it in the constructor, the id attribute still produces a value of __`None`__ when we access it.\n",
     "\n",
-    "### Adding and Updating Objects in the Session\n",
+    "### 14.1.6 Adding and Updating Objects in the Session\n",
     "\n",
     "To add object to our database __`session`__:"
    ]
@@ -349,7 +349,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Rolling Back the Session\n",
+    "### 14.1.7 Rolling Back the Session\n",
     "\n",
     "Since the `session` works within a transaction, we can roll back changes made too. Let’s make two changes that we’ll revert; ed_user‘s user name gets set to Edwardo and we’ll add another erroneous user, `fake_user`:"
    ]
@@ -450,7 +450,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Querying the Session\n",
+    "### 14.1.8 Querying the Session\n",
     "\n",
     "A Query object is created using the __`sessions.query()`__ method. This function takes a variable number of arguments, which can be any combination of classes and class-instrumented descriptors. \n",
     "\n",
@@ -564,7 +564,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Summary\n",
+    "### 14.1.9 Summary\n",
     "\n",
     "Our sample SQLAlchemy code may be organized and summed up like this:"
    ]
