--- a/Intermediate_2/14.2 Peewee.ipynb
+++ b/Intermediate_2/14.2 Peewee.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 18.2 Peewee\n",
+    "## 14.2 Peewee\n",
     "\n",
     "> _Peewee is a simple and small ORM. It has few (but expressive) concepts, making it easy to learn and intuitive to use._\n",
     "\n",
@@ -36,7 +36,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Model Definition\n",
+    "### 14.2.1 Model Definition\n",
     "\n",
     "When starting a project with Peewee, it’s typically best to begin with your data model, by defining one or more `Model` classes. This usually goes into the __`models.py`__ file of your application. We'll use SQLite:"
    ]
@@ -72,7 +72,7 @@
    "source": [
     "We created a `BaseModel` that uses our SQLite database so all models using this inherits this setting.\n",
     "\n",
-    "### Creating the Database\n",
+    "### 14.2.2 Creating the Database\n",
     "\n",
     "Now that we have our model, let’s connect it to the database. Although it’s not necessary to open the connection explicitly, it is good practice since it will reveal any errors with your database connection immediately, as opposed to some arbitrary time later when the first query is executed. It is also good to close the connection when you are done – for instance, a web app might open a connection when it receives a request, and close the connection when it sends the response.\n",
     "\n",
@@ -100,7 +100,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Storing data\n",
+    "### 14.2.3 Storing data\n",
     "\n",
     "Let’s begin by populating the database with some people. We will use the __`save()`__ and __`create()`__ methods to add and update people’s records.\n",
     "\n",
@@ -144,7 +144,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Updating Data\n",
+    "### 14.2.4 Updating Data\n",
     "\n",
     "Updating is as simple as updating an instance and the calling __`save()`__ method on it:"
    ]
@@ -165,7 +165,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Removing Data\n",
+    "### 14.2.5 Removing Data\n",
     "\n",
     "Removing data is as simple as calling the __`delete_instance()`__ method:"
    ]
@@ -185,11 +185,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Autocommit\n",
+    "### 14.2.6 Autocommit\n",
     "\n",
     "While Peewee initializes databases with __`autocommit=True`__ by default, it has support for transaction handling with `Database.atomic()` or `Database.transaction()` either as a context manager or a decorator. Peewee has no \"sessions\" like in SQLAlchemy.\n",
     "\n",
-    "#### Context Manager"
+    "#### 14.2.6.1 Context Manager"
    ]
   },
   {
@@ -219,7 +219,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Decorator"
+    "#### 14.2.6.2 Decorator"
    ]
   },
   {
@@ -297,11 +297,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Retrieving Data\n",
+    "### 14.2.7 Retrieving Data\n",
     "\n",
     "The real strength of our database is in how it allows us to retrieve data through queries. Relational databases are excellent for making ad-hoc queries.\n",
     "\n",
-    "#### Getting single records\n",
+    "#### 14.2.7.1 Getting single records\n",
     "\n",
     "Let’s retrieve Grandma’s record from the database. To get a single record from the database, use `SelectQuery.get()` or the equivalent shorthand `Model.get()`:"
    ]
@@ -325,7 +325,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Lists of records\n",
+    "#### 14.2.7.2 Lists of records\n",
     "\n",
     "Let’s list all the people in the database:"
    ]
@@ -365,7 +365,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Summary\n",
+    "### 14.2.8 Summary\n",
     "\n",
     "Our sample Peewee code may be organized and summed up like this:"
    ]
