--- a/Intermediate_2/15. Sets.ipynb
+++ b/Intermediate_2/15. Sets.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# [Sets](https://docs.python.org/3.5/library/stdtypes.html#set)\n",
+    "# 15. [Sets](https://docs.python.org/3.5/library/stdtypes.html#set)\n",
     "\n",
     "A Set is an __unordered__ collection of __unique__ (no duplicate) objects. Sets can be used to perform mathematical set operations like union, intersection, symmetric difference etc."
    ]
@@ -13,7 +13,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 19.1 Creating a set\n",
+    "## 15.1 Creating a set\n",
     "\n",
     "If we want to create a set, we can call the built-in __`set()`__ function with a sequence or another iterable object:"
    ]
@@ -129,9 +129,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 19.2 Methods and Operations\n",
+    "## 15.2 Methods and Operations\n",
     "\n",
-    "### `add()`\n",
+    "### 15.2.1 `add()`\n",
     "\n",
     "A method which adds an element, which has to be immutable, to a set."
    ]
@@ -155,7 +155,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### `clear()`\n",
+    "### 15.2.2 `clear()`\n",
     "\n",
     "All elements will be removed from a set."
    ]
@@ -179,7 +179,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### `copy()`\n",
+    "### 15.2.3 `copy()`\n",
     "\n",
     "Creates a shallow copy, which is returned.\n",
     "\n",
@@ -207,11 +207,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### `union()`\n",
+    "### 15.2.4 `union()`\n",
     "\n",
     "Returns the union of a set and the set of elements in an iterable. \n",
     "\n",
-    "![Intermediate_3](./images/img_union.png)\n",
+    "![Intermediate_2](./images/img_union.png)\n",
     "\n",
     "For example, you want to return the list of all the students:"
    ]
@@ -235,11 +235,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### `intersection()`\n",
+    "### 15.2.5 `intersection()`\n",
     "\n",
     "The resulting __`set`__ has elements that are common to both source __`sets`__.\n",
     "\n",
-    "![Intermediate_3](./images/img_intersection.png)\n",
+    "![Intermediate_2](./images/img_intersection.png)\n",
     "\n",
     "For example, you want to return the list of the students who are taking up both Math and English classes:"
    ]
@@ -263,11 +263,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### `difference()`\n",
+    "### 15.2.6 `difference()`\n",
     "\n",
     "The resulting __`set`__ has elements of the left-hand set with all elements from the right-hand set removed.\n",
     "\n",
-    "![Intermediate_3](./images/img_difference.png)\n",
+    "![Intermediate_2](./images/img_difference.png)\n",
     "\n",
     "For example, you want to return the list of the students are only taking up Math:"
    ]
@@ -291,11 +291,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### `symmetric_difference()`\n",
+    "### 15.2.7 `symmetric_difference()`\n",
     "\n",
     "The resulting __`set`__ has elements which are unique to each __`set`__.\n",
     "\n",
-    "![Intermediate_3](./images/img_symmetric_difference.png)\n",
+    "![Intermediate_2](./images/img_symmetric_difference.png)\n",
     "\n",
     "For example, you want to return the list of the students are only taking up one of the classes:"
    ]
@@ -319,7 +319,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Membership\n",
+    "### 15.2.8 Membership\n",
     "\n",
     "Membership can be checked in sets similar to lists."
    ]
@@ -343,11 +343,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Other Methods and Operations\n",
+    "### 15.2.9 Other Methods and Operations\n",
     "\n",
     "There are other operations available on sets such as checking for (proper) subsets or supersets, as well as compound operations. Sets provide many methods and operations that allow for shorter code, avoiding loops while maintaining code readability.\n",
     "\n",
-    "### Why bring up sets now?\n",
+    "### 15.2.10 Why bring up sets now?\n",
     "\n",
     "By now you may already have a good grasp of some of Python's data types such as lists, tuples and dictionaries. We can avoid confusion between the types. We are also starting to work with databases and we're using an ORM to generate queries. Sets, as you'll discover, are perfect for use with database query results. Each database entry is unique, usually with an ID and each set member is unique since no item can be repeated. You know where I'm going with this. In fact, some results are being referred to as a `QuerySet`. Thinking in terms of sets is very useful when working with database queries."
    ]
