--- a/Intermediate_2/16. List, Set and Dictionary Comprehensions.ipynb
+++ b/Intermediate_2/16. List, Set and Dictionary Comprehensions.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# [List Comprehensions](https://docs.python.org/3.5/tutorial/datastructures.html#list-comprehensions)\n",
+    "# 16. [List Comprehensions](https://docs.python.org/3.5/tutorial/datastructures.html#list-comprehensions)\n",
     "\n",
     "> _List comprehensions provide a concise way to create lists. Common applications are to make new lists where each element is the result of some operations applied to each member of another sequence or iterable, or to create a subsequence of those elements that satisfy a certain condition._\n",
     "\n",
