--- a/Intermediate_2/17. Generators.ipynb
+++ b/Intermediate_2/17. Generators.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Generators\n",
+    "# 17. Generators\n",
     "\n",
     "> _Generators are a simple and powerful tool for creating iterators - an object representing a stream of data._\n",
     "\n",
@@ -14,7 +14,7 @@
     "\n",
     "* [Generator Functions](https://www.python.org/dev/peps/pep-0255/) - A function which returns a generator iterator\n",
     "\n",
-    "## 21.1 Generator Expressions\n",
+    "## 17.1 Generator Expressions\n",
     "\n",
     "The previous notebook covered list comprehensions. When lists can no longer fit into the memory of your computer, that's the time when you realize why there is a need for generators. Large lists, however, aren't required when deciding whether to use generators. In fact, generators are more memory-efficient than lists. In Python 2.x, `range()` used a list while `xrange()` used a generator to create a range of numbers. In Python 3.x, `range()` defauled to using a generator and `xrange()` is has been deprecated.\n",
     "\n",
@@ -134,7 +134,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 21.2 Generator Function\n",
+    "## 17.2 Generator Function\n",
     "\n",
     "Generator functions can achieve the same outcome but coming from a different perspective. They look like a normal functions except that it contains yield expressions for producing a series of values usable in a for-loop or that can be retrieved one at a time with the next() function.\n",
     "\n",
