--- a/Intermediate_3/21. Regular Expressions.ipynb
+++ b/Intermediate_3/21. Regular Expressions.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 24. Regular Expressions in Python\n",
+    "# 21. Regular Expressions in Python\n",
     "\n",
     "The [`re`](https://docs.python.org/3.5/library/re.html) module provides regular expression or regex features in Python. It can be used to search and match on both unicode and 8-bit strings. However, the two types can not be mixed.\n",
     "\n",
@@ -34,11 +34,11 @@
    "source": [
     "> _The module defines several functions, constants, and an exception. Some of the functions are simplified versions of the full featured methods for compiled regular expressions. Most non-trivial applications always use the compiled form._\n",
     "\n",
-    "## Functions\n",
+    "## 21.1 Functions\n",
     "\n",
     "> _Python offers two different primitive operations based on regular expressions: __re.match() checks for a match only at the beginning__ of the string, while __re.search() checks for a match anywhere__ in the string (this is what Perl does by default)._\n",
     "\n",
-    "### `re.match() and re.search()`"
+    "### 21.1.1 `re.match() and re.search()`"
    ]
   },
   {
@@ -110,7 +110,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### `re.compile()`\n",
+    "### 21.1.2 `re.compile()`\n",
     "\n",
     "We used our regex pattern several times in our examples. If we wanted to make our pattern reusable, `re.compile()` is available to also optimize it into an object. There is a slight but almost negligible performance boost when working with compiled regex."
    ]
@@ -139,7 +139,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### `re.split()`\n",
+    "### 21.1.3 `re.split()`\n",
     "\n",
     "There is also `re.split()` that functions similiarly to `string.split()`, except it accepts regex."
    ]
@@ -159,7 +159,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### `re.findall()`\n",
+    "### 21.1.4 `re.findall()`\n",
     "\n",
     "To return all non-overlapping matches of a pattern, use `re.findall()`."
    ]
@@ -179,7 +179,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### `re.finditer()`\n",
+    "### 21.1.5 `re.finditer()`\n",
     "\n",
     "Instead of returning a list, `re.finditer()` returns an iterator that returns match objects."
    ]
@@ -200,7 +200,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### `re.fullmatch()`\n",
+    "### 21.1.6 `re.fullmatch()`\n",
     "\n",
     "If you want to check whether a whole string matches a pattern, there is a `re.fullmatch()` available (new in Python 3.4)."
    ]
@@ -225,7 +225,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### `re.sub()` and `re.subn()`\n",
+    "### 21.1.7 `re.sub()` and `re.subn()`\n",
     "\n",
     "`sub()` performs a substitution on any pattern matches with with the given replacement and returns the new string.\n",
     "\n",
