--- a/Intermediate_2/14.1 SQLAlchemy.ipynb
+++ b/Intermediate_2/14.1 SQLAlchemy.ipynb
@@ -29,13 +29,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting SQLAlchemy\n",
+      "  Downloading SQLAlchemy-1.0.12.tar.gz (4.7MB)\n",
+      "\u001b[K    100% |████████████████████████████████| 4.8MB 85kB/s \n",
+      "\u001b[?25hInstalling collected packages: SQLAlchemy\n",
+      "  Running setup.py install for SQLAlchemy\n",
+      "Successfully installed SQLAlchemy-1.0.12\n",
+      "\u001b[33mYou are using pip version 7.1.2, however version 8.1.1 is available.\n",
+      "You should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
-    "!pip install SQLAlchemy"
+    "!pip3 install SQLAlchemy"
    ]
   },
   {
@@ -51,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -87,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -109,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -129,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -154,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -165,33 +180,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'ed'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "ed_user.name"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'edspassword'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "ed_user.password"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'None'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "str(ed_user.id)"
    ]
@@ -209,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -229,11 +277,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "our_user = session.query(User).filter_by(name='ed').first() \n",
     "ed_user is our_user"
@@ -248,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -269,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -287,22 +346,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "IdentitySet([<User(name='ed', fullname='Ed Jones', password='f8s7ccs')>])"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "session.dirty"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "IdentitySet([<User(name='fred', fullname='Fred Flinstone', password='blah')>, <User(name='mary', fullname='Mary Contrary', password='xxg527')>, <User(name='wendy', fullname='Wendy Williams', password='foobar')>])"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "session.new"
    ]
@@ -316,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
@@ -336,11 +417,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "ed_user.id "
    ]
@@ -356,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
@@ -367,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "collapsed": true
    },
@@ -379,11 +471,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<User(name='Edwardo', fullname='Ed Jones', password='f8s7ccs')>,\n",
+       " <User(name='fakeuser', fullname='Invalid', password='12345')>]"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "session.query(User).filter(User.name.in_(['Edwardo', 'fakeuser'])).all()"
    ]
@@ -397,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "collapsed": true
    },
@@ -408,22 +512,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'ed'"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "ed_user.name"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "fake_user in session"
    ]
@@ -459,11 +585,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ed Ed Jones\n",
+      "wendy Wendy Williams\n",
+      "mary Mary Contrary\n",
+      "fred Fred Flinstone\n"
+     ]
+    }
+   ],
    "source": [
     "for instance in session.query(User).order_by(User.id):\n",
     "    print(instance.name, instance.fullname)"
@@ -478,11 +615,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ed\n",
+      "wendy\n",
+      "mary\n",
+      "fred\n"
+     ]
+    }
+   ],
    "source": [
     "for row in session.query(User.name.label('name_label')).all():\n",
     "    print(row.name_label)"
@@ -497,11 +645,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<User(name='ed', fullname='Ed Jones', password='f8s7ccs')>\n",
+      "<User(name='wendy', fullname='Wendy Williams', password='foobar')>\n",
+      "<User(name='mary', fullname='Mary Contrary', password='xxg527')>\n",
+      "<User(name='fred', fullname='Fred Flinstone', password='blah')>\n"
+     ]
+    }
+   ],
    "source": [
     "from sqlalchemy.orm import aliased\n",
     "user_alias = aliased(User, name='user_alias')\n",
@@ -519,11 +678,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<User(name='wendy', fullname='Wendy Williams', password='foobar')>\n",
+      "<User(name='mary', fullname='Mary Contrary', password='xxg527')>\n"
+     ]
+    }
+   ],
    "source": [
     "for u in session.query(User).order_by(User.id)[1:3]:\n",
     "    print(u)"
@@ -538,11 +706,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ed\n"
+     ]
+    }
+   ],
    "source": [
     "for name, in session.query(User.name).filter_by(fullname='Ed Jones'):\n",
     "    print(name)"
@@ -550,11 +726,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ed\n"
+     ]
+    }
+   ],
    "source": [
     "for name, in session.query(User.name).filter(User.fullname=='Ed Jones'):\n",
     "    print(name)"
@@ -571,11 +755,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2016-04-22 16:09:58,985 INFO sqlalchemy.engine.base.Engine SELECT CAST('test plain returns' AS VARCHAR(60)) AS anon_1\n",
+      "2016-04-22 16:09:58,987 INFO sqlalchemy.engine.base.Engine ()\n",
+      "2016-04-22 16:09:58,990 INFO sqlalchemy.engine.base.Engine SELECT CAST('test unicode returns' AS VARCHAR(60)) AS anon_1\n",
+      "2016-04-22 16:09:58,991 INFO sqlalchemy.engine.base.Engine ()\n",
+      "2016-04-22 16:09:58,993 INFO sqlalchemy.engine.base.Engine PRAGMA table_info(\"users\")\n",
+      "2016-04-22 16:09:58,994 INFO sqlalchemy.engine.base.Engine ()\n",
+      "2016-04-22 16:09:59,000 INFO sqlalchemy.engine.base.Engine BEGIN (implicit)\n",
+      "2016-04-22 16:09:59,003 INFO sqlalchemy.engine.base.Engine INSERT INTO users (name, fullname, password) VALUES (?, ?, ?)\n",
+      "2016-04-22 16:09:59,004 INFO sqlalchemy.engine.base.Engine ('ed', 'Ed Jones', 'edspassword')\n",
+      "2016-04-22 16:09:59,007 INFO sqlalchemy.engine.base.Engine COMMIT\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<sqlalchemy.orm.query.Query at 0x106112da0>"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# In your settings file\n",
     "from sqlalchemy import create_engine\n",
